@@ -333,6 +333,7 @@ przypadkowy',
 'L_CONFIG_VIEW_SORT'				=> 'Tri des articles',
 'L_CONFIG_VIEW_BYPAGE'				=> 'Nombre d\'articles affichés par page',
 'L_CONFIG_VIEW_BYPAGE_ARCHIVES'		=> 'Nombre d\'articles affichés par page dans les archives',
+'L_CONFIG_VIEW_BYPAGE_TAGS'			=> 'Artykuły na stronie w tagach',
 'L_CONFIG_VIEW_BYPAGE_ADMIN'		=> 'Nombre d\'articles affichés par page dans l\'administration',
 'L_CONFIG_VIEW_SORT_COMS'			=> 'Tri des commentaires',
 'L_CONFIG_VIEW_BYPAGE_ADMIN_COMS'	=> 'Nombre de commentaires affichés par page dans l\'administration',
