@@ -283,8 +283,9 @@ $LANG = array(
 'L_CONFIG_VIEW_FILES_EDIT_TITLE'							=> 'Editaţi fişierele tema',
 'L_CONFIG_VIEW_FILES_EDIT'									=> 'Editaţi fişierele tema',
 'L_CONFIG_VIEW_SORT'										=> 'Sortare articole',
-'L_CONFIG_VIEW_BYPAGE'										=> 'Numărul de  articole afisate pe pagina',
-'L_CONFIG_VIEW_BYPAGE_ARCHIVES'								=> 'Numărul de  elemente afişate pe pagină în arhivă',
+'L_CONFIG_VIEW_BYPAGE'										=> 'Numărul de articole afisate pe pagina',
+'L_CONFIG_VIEW_BYPAGE_ARCHIVES'								=> 'Numărul de elemente afişate pe pagină în arhivă',
+'L_CONFIG_VIEW_BYPAGE_TAGS'									=> 'Numărul de articole pe pagină în etichetele',
 'L_CONFIG_VIEW_BYPAGE_ADMIN'								=> 'Numărul de  elemente afişate pe pagină în administraţie',
 'L_CONFIG_VIEW_SORT_COMS'									=> 'Sortare comentarii',
 'L_CONFIG_VIEW_BYPAGE_ADMIN_COMS'							=> 'Numărul de comentarii pe pagină în admin',
