@@ -226,7 +226,7 @@ class plxMotor {
 				$this->mode = 'tags'; # Affichage en mode home
 				$this->template = 'tags.php';
 				$this->motif = '/('.implode('|', $ids).').(?:[0-9]|home|,)*(?:'.$this->activeCats.'|home)(?:[0-9]|home|,)*.[0-9]{3}.[0-9]{12}.[a-z0-9-]+.xml$/';
-				$this->bypage = $this->aConf['bypage']; # Nombre d'article par page
+				$this->bypage = $this->aConf['bypage_tags']; # Nombre d'article par page
 			} else {
 				$this->error404(L_ARTICLE_NO_TAG);
 			}
@@ -359,6 +359,7 @@ class plxMotor {
 		$this->aConf['tri_coms'] = plxUtils::getValue($this->aConf['tri_coms'],$this->aConf['tri']);
 		$this->aConf['bypage_admin_coms'] = plxUtils::getValue($this->aConf['bypage_admin_coms'],10);
 		$this->aConf['bypage_archives'] = plxUtils::getValue($this->aConf['bypage_archives'],5);
+		$this->aConf['bypage_tags'] = plxUtils::getValue($this->aConf['bypage_tags'],5);		
 		$this->aConf['userfolders'] = plxUtils::getValue($this->aConf['userfolders'],0);
 		$this->aConf['meta_description'] = plxUtils::getValue($this->aConf['meta_description']);
 		$this->aConf['meta_keywords'] = plxUtils::getValue($this->aConf['meta_keywords']);
