@@ -77,6 +77,7 @@ $config = array('title'=>'PluXml',
 				'clef'=>plxUtils::charAleatoire(15),
 				'bypage'=>5,
 				'bypage_archives'=>5,
+				'bypage_tags'=>5,
 				'bypage_admin'=>10,
 				'bypage_admin_coms'=>10,
 				'bypage_feed'=>8,
