@@ -2,14 +2,15 @@
 
 [+] PluCSS 1.2
 [+] Contrôle de la force des mots de passe saisis
+[+] Protection attaque brute force sur l'écran de connexion à l'administration
 [+] Administration > Paramètres > Thèmes : test existence fichier infos.xml dans le dossier thème pour le lister ou non
 [+] Administration > Paramètres > Plugins : ajout filtre de recherche
+[+] Administration > Paramètres > Options d'affichage : Nombre d'articles affichés par page dans les mots clés
 [+] Tri des articles par ordre aléatoire configurable à partir de l'administration (Paramètres > Options d'affichage et Catégories)
 [+] plxShow:templateCSS - Prise en compte des fichiers css minifiés si disponibles (contribution alexandre-lg)
 [+] Réglage de l'affichage de l'indentation des commentaires sur smartphones (contribution kowalsky)
 [+] Gestionnaire de médias : affichage des miniatures jpeg
 [+] Gestionnaire de médias : copie lien image dans le presse-papier
-[+] Protection attaque brute force sur l'écran de connexion à l'administration
 [+] #69: plxAdmin:editArticle - ajout du hook plxAdminEditArticleEnd
 [+] #177: Ajout de la protection du lien téléphone (contribution cfdev)
 [+] #191: plxShow:catList - Ajout de la variable #cat_description
